implement product management page and CRUD functionality