@@ -6,6 +6,7 @@ import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Collection;
+import java.util.Collections;
 import java.util.List;
 
 public class CustomUserDetails implements UserDetails {
@@ -17,23 +18,49 @@ public class CustomUserDetails implements UserDetails {
     }
 
     @Override
-    public String getUsername() { return user.getEmail(); }
-
-    @Override
-    public String getPassword() { return user.getPassword(); }
-
-    @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return List.of(new SimpleGrantedAuthority(user.getRole()));
+        String role = user.getRole();
+        if (!role.startsWith("ROLE_")) {
+            role = "ROLE_" + role;
+        }
+        return Collections.singletonList(new SimpleGrantedAuthority(role));
     }
 
-    @Override public boolean isAccountNonExpired() { return true; }
-    @Override public boolean isAccountNonLocked() { return true; }
-    @Override public boolean isCredentialsNonExpired() { return true; }
-    @Override public boolean isEnabled() { return true; }
+    @Override
+    public String getUsername() {
+        return user.getEmail();
+    }
 
-    // eigene Getter
-    public String getFirstname() { return user.getFirstname(); }
-    public String getLastname() { return user.getLastname(); }
-    public String getEmail() { return user.getEmail(); }
+    @Override
+    public String getPassword() {
+        return user.getPassword();
+    }
+
+    public String getFirstname() {
+        return user.getFirstname();
+    }
+
+    public String getLastname() {
+        return user.getLastname();
+    }
+
+    @Override
+    public boolean isAccountNonExpired() {
+        return true;
+    }
+
+    @Override
+    public boolean isAccountNonLocked() {
+        return true;
+    }
+
+    @Override
+    public boolean isCredentialsNonExpired() {
+        return true;
+    }
+
+    @Override
+    public boolean isEnabled() {
+        return true;
+    }
 }
